--- a/dashboards/admin/ceph/templates/ceph/index.html
+++ b/dashboards/admin/ceph/templates/ceph/index.html
@@ -6,7 +6,10 @@
   {% include "horizon/common/_page_header.html" with title=_("Ceph") %}
 {% endblock page_header %}
 
-{% block admin_main %}
+{% block main %}
+<div class="row-fluid">
+  <div class="span12">
+    {{ tab_group.render }}
+  </div>
+</div>
 {% endblock %}
-
-
