display osd tree

--- a/dashboards/admin/ceph/templates/ceph/_topology.html
+++ b/dashboards/admin/ceph/templates/ceph/_topology.html
@@ -1,1 +1,50 @@
+<style type="text/css">
+  
+    .node {
+            cursor: pointer;
+                      }
+
+  .overlay{
+            background-color:#EEE;
+              }
+   
+  .node circle {
+          fill: #fff;
+                    stroke: steelblue;
+                                stroke-width: 1.5px;
+                                  }
+   
+  .node text {
+          font-size:10px; 
+              font-family:sans-serif;
+                }
+   
+  .link {
+          fill: none;
+                    stroke: #ccc;
+                                stroke-width: 1.5px;
+                                  }
+
+  .templink {
+          fill: none;
+                    stroke: red;
+                                stroke-width: 3px;
+                                  }
+
+  .ghostCircle.show{
+            display:block;
+                      }
+
+  .ghostCircle, .activeDrag .ghostCircle{
+             display: none;
+                        }
+
+</style>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="/static/dashboard/js/dndTree.js"></script>
 <p>togology</p>
+<div id="osd_tree"></div>
+<div id="tree-container"></div>
+<script>
+$("#osd_tree").load("/horizon/admin/ceph/?json=true");
+</script>
